...
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/task_card"
    app:cardBackgroundColor="@android:color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
...
        android:background="@drawable/task_item"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="-4dp">

        <TextView
            android:id="@+id/task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/task_user_profile"
            android:layout_marginEnd="16dp"
            android:text="Task Name"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"
            tools:ignore="HardcodedText"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/task_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_name"
            android:layout_marginEnd="16dp"
            android:text="Task Data"
            android:textColor="#000000"
...
            android:id="@+id/task_user_profile"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="69dp"
            android:layout_toStartOf="@+id/task_priority" />

        <TextView
            android:id="@+id/task_priority"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
...
