<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:background="@color/colorPrimary"
                                   android:elevation="4dp"
                                   android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <TextView
            android:id="@+id/page_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="All Tasks"
            android:textSize="25sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

    <include layout="@layout/activity_filter"/>

</androidx.appcompat.widget.Toolbar>
