...

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_task_button"

            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
...
            app:backgroundTint="@color/colorPrimaryDark"
            android:backgroundTintMode="add"
            android:onClick="onButtonPress"
            />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleview_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"/>
</RelativeLayout>


...
