<resources>
    <string name="user_extra">u</string>
    <string name="task_extra">t</string>
    <string name="position_extra">p</string>
    <string name="editSetting_extra">edit</string>
    <string name="app_name">Community Garden</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
...
